# tt

./: build_notes.txt  compute_k1.py  config_cipher.py  enc_decoy_salt.py  enc_strings.py  encrypt_eq_url.py  encrypt_remote.py  equation_encoder.py  inject_hash.py  inject_prologues.py  keygen.py  label_key_encoder.py  native-lib.cpp.bak  offset_encoder.py  patch_enc_constants.py  settings.gradle  xor_tool.py
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/google/firebase /: MessagingUnityPlayerActivity.java
